--- a/src/Presentation/SmartStore.Web/Content/shared/_rtl.scss
+++ b/src/Presentation/SmartStore.Web/Content/shared/_rtl.scss
@@ -110,7 +110,7 @@
 
 	.choice-item-img,
 	.choice-item-color {
-		margin-left: 0.25rem;
+		margin-left: 0.4rem;
 		margin-right: initial;
 	}
 
